# heckcheck

./: Cargo.toml  README.md
src/: checker.rs  lib.rs  shrink.rs  shrinker.rs
tests/: test.rs
