[package]
name = "heckcheck"
version = "2.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/heckcheck"
documentation = "https://docs.rs/heckcheck"
description = "A heckin small test case generator"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yosh Wuyts <rust@yosh.is>"
]

[features]

[dependencies]
arbitrary = "1.0.1"
rand = "0.8.4"
base64 = "0.13.0"

[dev-dependencies]
arbitrary = { version = "1.0.1", features = ["derive"] }
